bugs/client/gameApp/src/view/panel/tabs/coloniesTab/colonyManager/nestsTab/nestManager/styles.css
.nest-manager {
    margin-top: var(--margin-huge);
}

.nest-manager__tab {
    border-bottom: 1px solid lightgray;
}

.nest-manager__tab:first-child {
    border-top: 1px solid lightgray;
}

.nest-manager__tab-title {
    font-weight: var(--font-weight-strong);
    font-size: var(--font-size-large);
    text-align: center;
    margin-top: var(--margin-large);
    margin-bottom: var(--margin-large);
}

.nest-manager__lay-egg-controls-container {
    margin-top: var(--margin-small);
    display: flex;
    gap: var(--margin);
    align-items: center;
}

.nest-manager__fertilize-field-label {
    text-transform: capitalize;
}

.nest-manager__eggs-list-actions-col {
    width: 120px;
}

.nest-manager__eggs-list-state-col {
    width: 90px;
}

.nest-manager__eggs-list-caste-col {
    width: 85px;
}

.nest-manager__ant-type-selector {
    width: 100%;
}

.nest-manger__eggs-table td {
    vertical-align: top;
}

.nest-manager__egg_actions_container {
    display: flex;
    flex-direction: column;
    gap: var(--margin-small);
}

.nest-manager__egg-to-chamber-btn-container {
    display: flex;
    flex-direction: row;
}

.nest-manager__lay-egg-title {
    margin-top: var(--margin-large);
    font-weight: var(--font-weight-strong);
    font-size: var(--font-size-large);
}

.nest-manager__larvae-table {
    margin-bottom: var(--margin-large);
}

.nest-manager__larvae-table td {
    vertical-align: top;
}

.nest-manager__larvae-list-actions-col {
    width: 120px;
}

.nest-manager__larvae-list-progress-col {
    width: 90px;
}

.nest-manager__larvae-list-caste-col {
    width: 85px;
    text-align: center;
}

.nest-manager__larva_actions_container {
    display: flex;
    flex-direction: column;
    gap: var(--margin-small);
}

.nest-manager__nest-field {
    display: flex;
    margin-top: var(--margin);
}

.nest-manager__nest-field-label {
    flex: 0 0 145px;
    text-transform: capitalize;
}

.nest-manager__nest-field-data-container {
    flex: 1;
    display: flex;
    align-items: end;
}

.nest-manage__to-larva-btn--ready {
    background-color: #09691f;
}

.nest-manage__to-larva-btn--ready:hover {
  background-color: #0b7a26;
}

.nest-manage__to-larva-btn--ready:active {
  background-color: #07551a;
}

.nest-manager__data-container {
    text-align: center;
}

.nest-manager__needed-food-count--enough {
    color: #3B873E;
}

.nest-manager__needed-food-count--shortage {
    color: #C0392B;
}

